--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
