--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "del": "^2.2.2",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "foundation-cli": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-cachebust": "0.0.6",
+    "gulp-concat": "^2.6.1",
+    "gulp-print": "^2.0.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
     "massive": "^2.6.0",
     "moment": "^2.18.1",
     "mongodb": "^2.2.26",
