--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-cachebust": "0.0.6",
     "gulp-concat": "^2.6.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-print": "^2.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
