--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1"
   }
 }
