--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.18.1",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
+    "owl.carousel": "^2.2.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
