--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "cors": "^2.8.3",
     "del": "^2.2.2",
     "express": "^4.15.2",
@@ -40,7 +41,8 @@
     "mongoose": "^4.9.8",
     "mongoose-session": "0.0.4",
     "owl.carousel": "^2.2.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
