--- a/package.json
+++ b/package.json
@@ -2,9 +2,25 @@
   "name": "subaruclone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "connect-mongo": "^1.3.2",
+    "cors": "^2.8.3",
+    "es2015": "^0.0.0",
+    "express-session": "^1.15.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "mongoose-session": "^0.0.4",
+    "mongoose": "^4.11.0",
+    "owl.carousel": "^2.2.0",
+    "session": "^0.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,37 +31,5 @@
   "bugs": {
     "url": "https://github.com/sbrycebarker/subaruclone/issues"
   },
-  "homepage": "https://github.com/sbrycebarker/subaruclone#readme",
-  "dependencies": {
-    "babel-preset-stage-2": "^6.24.1",
-    "body-parser": "^1.17.1",
-    "connect-mongo": "^1.3.2",
-    "cors": "^2.8.3",
-    "del": "^2.2.2",
-    "express": "^4.15.2",
-    "express-session": "^1.15.3",
-    "foundation-cli": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cachebust": "0.0.6",
-    "gulp-concat": "^2.6.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-print": "^2.0.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "massive": "^2.6.0",
-    "moment": "^2.18.1",
-    "mongodb": "^2.2.26",
-    "mongoose": "^4.9.8",
-    "mongoose-session": "0.0.4",
-    "npm ins": "^6.24.1",
-    "owl.carousel": "^2.2.0",
-    "request": "^2.81.0",
-    "session": "^0.1.0"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-livereload": "^3.8.1"
-  }
+  "homepage": "https://github.com/sbrycebarker/subaruclone#readme"
 }
