--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
-    "cors": "^2.8.3",
+    "cors": "^2.8.4",
     "es2015": "^0.0.0",
+    "express": "^4.15.4",
     "express-session": "^1.15.3",
+    "foundation-cli": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "massive": "^4.0.0",
+    "moment": "^2.18.1",
     "mongo-client-connect": "^1.0.6",
     "mongoose": "^4.11.0",
     "mongoose-session": "^0.0.4",
