--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
     "cors": "^2.8.4",
+    "del": "^3.0.0",
     "es2015": "^0.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.3",
     "foundation-cli": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-cachebust": "0.0.8",
+    "gulp-concat": "^2.6.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-print": "^2.0.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "massive": "^4.0.0",
     "moment": "^2.18.1",
     "mongo-client-connect": "^1.0.6",
