--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
@@ -29,7 +30,9 @@
     "mongoose": "^4.11.0",
     "mongoose-session": "^0.0.4",
     "owl.carousel": "^2.2.0",
-    "session": "^0.1.0"
+    "sendgrid": "^5.2.3",
+    "session": "^0.1.0",
+    "smtpapi": "1.3.1"
   },
   "devDependencies": {},
   "scripts": {
