--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "gulp-babel": "^6.1.2",
     "gulp-cachebust": "0.0.8",
     "gulp-concat": "^2.6.1",
-    "gulp-livereload": "^3.8.1",
     "gulp-print": "^2.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
@@ -30,11 +29,14 @@
     "mongoose": "^4.11.0",
     "mongoose-session": "^0.0.4",
     "owl.carousel": "^2.2.0",
+    "reload": "^2.2.2",
     "sendgrid": "^5.2.3",
     "session": "^0.1.0",
     "smtpapi": "1.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-livereload": "^3.8.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
